Initial fix of compilation errors

--- a/maikeconfig.json
+++ b/maikeconfig.json
@@ -56,7 +56,10 @@
                         ],
                         "iquote": [
                             "."
-                        ]
+                        ],
+                        "std_revision": {
+                            "min":"c++20"
+                        }
                     },
                     "recipe": "cxx_compiler.py",
                     "use_get_tags": 0
