--- a/maikeconfig.json
+++ b/maikeconfig.json
@@ -26,7 +26,9 @@
                             "-g",
                             "-Wall",
                             "-Wextra",
-                            "-O3"
+                            "-O3",
+                            "-ftree-vectorize",
+                            "-ffast-math"
                         ],
                         "iquote": [
                             "."
@@ -56,7 +58,9 @@
                             "-g",
                             "-Wall",
                             "-Wextra",
-                            "-O3"
+                            "-O3",
+                            "-ftree-vectorize",
+                            "-ffast-math"
                         ],
                         "iquote": [
                             "."
