--- a/maikeconfig.json
+++ b/maikeconfig.json
@@ -27,8 +27,7 @@
                             "-Wall",
                             "-Wextra",
                             "-O3",
-                            "-ftree-vectorize",
-                            "-ffast-math"
+                            "-ftree-vectorize"
                         ],
                         "iquote": [
                             "."
@@ -59,8 +58,7 @@
                             "-Wall",
                             "-Wextra",
                             "-O3",
-                            "-ftree-vectorize",
-                            "-ffast-math"
+                            "-ftree-vectorize"
                         ],
                         "iquote": [
                             "."
